# kilauea-tracker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: refresh-cache.yml
.streamlit/: config.toml
data/: archive.csv  archive_v1.csv  last_modified.json  tilt_history.csv  uwd_digital_az300.csv  y_slope_history.json
data/run_reports/: 2026-04-21T23-14-00Z.json  2026-04-21T23-22-03Z.json  2026-04-21T23-23-08Z.json  2026-04-21T23-24-15Z.json  2026-04-21T23-24-34Z.json  2026-04-22T02-34-26Z.json  2026-04-22T02-36-55Z.json  2026-04-22T05-32-54Z.json  2026-04-22T12-36-54Z.json  2026-04-22T21-18-15Z.json  2026-04-22T21-58-49Z.json  2026-04-22T22-05-34Z.json  2026-04-23T12-37-06Z.json  2026-04-24T12-36-45Z.json  2026-04-25T12-27-42Z.json
data/sources/: dec2024_to_now.csv  dec2024_to_now_quality.csv  month.csv  month_quality.csv  three_month.csv  three_month_quality.csv  two_day.csv  two_day_quality.csv  week.csv  week_quality.csv
docs/: index.html
legacy/: Tiltmeter Data - Sheet1.csv  eruption_projection.py
pages/: about.py  backtest.py  cameras.py  chart.py  now.py  pipeline.py
scripts/: clean_archive.py  clean_archive.report.md  compare_models.py  import_digital_data.py  scatter_anchor_overlap.py  take_screenshot.py
src/kilauea_tracker/: __init__.py  app_state.py  archive.py  backtest.py  cache.py  config.py  model.py  peaks.py  phase.py  plotting.py  reconcile.py  safety_alerts.py
src/kilauea_tracker/ingest/: __init__.py  _anchor_fit.py  _reports.py  _runreport_serde.py  calibrate.py  exceptions.py  fetch.py  pipeline.py  trace.py
src/kilauea_tracker/models/: __init__.py  _bootstrap.py  _episodes.py  _huber.py  _intersection.py  auto.py  ffm_voight.py  interval_median.py  linear.py  linear_hist.py  linear_stitched.py  output.py  power_law.py  power_law_hist.py  protocol.py  registry.py  trendline_exp.py
src/kilauea_tracker/safety_alerts/: __init__.py  _fetch.py  _parse.py
src/kilauea_tracker/state/: __init__.py  accessor.py  refresh_store.py  snapshot.py  widgets.py
src/kilauea_tracker/ui/: __init__.py  about_tab.py  cameras.py  chart_tab.py  data_tab.py  diagnostics.py  hero.py  palette.py  pipeline_tab.py  state_banner.py  state_copy.py  styles.py
tests/: test_app_state_snapshot.py  test_archive.py  test_backtest.py  test_cache.py  test_calibrate.py  test_calibration_recovery.py  test_cameras.py  test_diagnostics.py  test_hero.py  test_model.py  test_models_auto.py  test_models_episodes.py  test_models_ffm_voight.py  test_models_huber.py  test_models_interval_median.py  test_models_linear.py  test_models_linear_hist.py  test_models_linear_stitched.py  test_models_output.py  test_models_power_law.py  test_models_power_law_hist.py  test_models_registry.py  test_models_trendline_exp.py  test_palette.py  test_peaks.py  test_phase.py  test_pipeline_alignment.py  test_pipeline_logs_predictions.py  test_plotting.py  test_plotting_render_curves.py  test_reconcile.py  test_refresh_store.py  test_safety_alerts.py  test_state_banner.py  test_state_copy.py  test_streamlit_app_structure.py  test_trace.py  test_ui_tabs.py
tests/fixtures/regression/: README.md  continuity_boundaries.csv
