[project]
name = "kilauea-tracker"
version = "2.0.0"
description = "Predicts the next fountain event at Kīlauea by tracing tilt data from USGS plot images."
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "opencv-python-headless>=4.9",
    "scikit-image>=0.22",
    "pytesseract>=0.3.10",
    "Pillow>=10",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]
# Optional extra used by `scripts/take_screenshot.py` to regenerate
# `docs/screenshot.png`. Not part of the runtime app or the test suite —
# install only when you need to refresh the README screenshot:
#   uv sync --extra screenshot
#   uv run playwright install chromium
screenshot = ["playwright>=1.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kilauea_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
